# not_everyone_ages_gracefully

./: README.md  baseline_model.jl  bubble_heatmap.py  build_tables.py  dsge_olg_model.jl  experimentos_formal_share.csv  main.py  pyproject.toml  run_experimental_design.jl
datos/: build_data.py  experimental_design.csv  parametros_olg.csv
datos/experimental_design/: build_experimental_design.jl  experimental_design.csv
datos/mortality_tables/: compute_mortality_tables.py
docs/: .gitignore
docs/elspub/: main.typ
docs/orange-book/: main.typ  sample.bib
docs/taller_investigacion/: references.bib  taller_investigacion.typ
env/: Manifest.toml  Project.toml
output/: results_all_no_lsra_baseline_lambda_1.0.csv  results_all_no_lsra_baseline_lambda_formal_share_0_95_1.0_T_100.csv  results_all_razon_formal_0_95_lambda_1_0.csv
output/baseline_lambda/: results_all_baseline_lambda_0.1.csv  results_all_baseline_lambda_0.2.csv  results_all_baseline_lambda_0.3.csv  results_all_baseline_lambda_0.4.csv  results_all_baseline_lambda_0.5.csv  results_all_baseline_lambda_0.6.csv  results_all_baseline_lambda_0.7.csv  results_all_baseline_lambda_0.8.csv  results_all_baseline_lambda_0.9.csv
output/share_formal/: results_all_162.csv  results_all_163.csv  results_all_164.csv  results_all_165.csv  results_all_166.csv  results_all_167.csv  results_all_168.csv  results_all_169.csv  results_all_170.csv  results_all_171.csv  results_all_172.csv  results_all_173.csv  results_all_174.csv  results_all_175.csv  results_all_176.csv  (+15 more)
src/: utils_baseline_model.jl  utils_dsge_olg_model.jl
(+11 files in other folders)
