[project]
name = "not-everyone-ages-gracefully"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "ipython>=9.6.0",
    "marimo>=0.17.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "path>=17.1.1",
    "vega-datasets>=0.9.0",
]
